Fix overlapping scrollbars

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@ body,
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow: auto;
+  overflow: initial;
 }
 
 html {
